--- a/images.html
+++ b/images.html
@@ -20,7 +20,7 @@
 </head>
 <body>
     <div class="container">
-        <div class="row justify-content-around align-items-center">
+        <div class="row justify-content-around">
             <img class="thumbnail col-6"src="img/brooke-lark-V4MBq8kue3U-unsplash.jpg" alt="">
             <img src="img/deva-williamson-S2jw81lfrG0-unsplash.jpg" class="thumbnail col-6" alt="">
             <img src="img/food-photographer-jennifer-pallian-dcPNZeSY3yk-unsplash.jpg" class="thumbnail col-12" alt="">
