--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="container-fuluid">
         <div class="row justify-content-around part1" style="background: url(img/nick-stephenson-P-KESVNvA84-unsplash.jpg);background-size: 100%;">
         <p class="col-10" style="color: rgb(137, 255, 2); font-size: 40px; text-align: center;">
             Assalomu alaykum aziz guruhdoshim <span style="color: red; text-transform: uppercase;">Dilshodaxon
