--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
 
 <body>
     <div class="container-fuluid">
-        <div class="row justify-content-around part1" style="background: url(img/nick-stephenson-P-KESVNvA84-unsplash.jpg);background-size: 100%;">
-        <p class="col-11" style="color: rgb(137, 255, 2); font-size: 40px; text-align: center;">
+        <img src="img/jason-leung-fXAuCMEYGY4-unsplash.jpg" alt="" style="position: fixed; width: 100%;" class="thumbnail">
+        <div class="row justify-content-around part1" style="">
+        
+            <p class="col-11" style="color: rgb(137, 255, 2); font-size: 40px; text-align: center;">
             Assalomu alaykum aziz guruhdoshim <span style="color: red; text-transform: uppercase;">Dilshodaxon
                 Valijonova</span>
             sizni bugungi tavallud ayyomingiz bilan chin qalbimdan tabriklayman!!!! Ilohim o'ylagan barcha ezgu
