--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="container-fuluid">
-        <img src="img/jason-leung-fXAuCMEYGY4-unsplash.jpg" alt="" style="position: fixed; width: 100%;" class="thumbnail">
+        <img src="img/jason-leung-fXAuCMEYGY4-unsplash.jpg" alt="" style="position: fixed;" class="thumbnail">
         <div class="row justify-content-around part1" style="">
         
             <p class="col-11" style="color: rgb(137, 255, 2); font-size: 40px; text-align: center;">
