--- a/images.html
+++ b/images.html
@@ -14,13 +14,14 @@
         img
         {
             padding: 3px !important;
-            border-radius: 5px;
+            border-radius: 15px !important;
         }
     </style>
 </head>
 <body>
-    <div class="container">
+    <div class="container-fluid" style="background: url(img1/slider-nav-4.png); background-size: 100%;">
         <div class="row justify-content-around">
+            <h3 style="text-align: center; color:#00ffab;" class="col-10">Qani yoqimli ishtaha bo'lmasam</h3>
             <img class="thumbnail col-6"src="img/brooke-lark-V4MBq8kue3U-unsplash.jpg" alt="">
             <img src="img/deva-williamson-S2jw81lfrG0-unsplash.jpg" class="thumbnail col-6" alt="">
             <img src="img/food-photographer-jennifer-pallian-dcPNZeSY3yk-unsplash.jpg" class="thumbnail col-12" alt="">
@@ -35,8 +36,23 @@
             <img src="img/photo_2020-12-04_13-54-32.jpg" class="thumbnail col-12" alt="">
             <img class="thumbnail col-6" src="img/tony-eight-media--uZNyLofoPw-unsplash.jpg" alt="">
             <img src="img/zeno-aras-lOW7w5-DMHk-unsplash.jpg" class="thumbnail col-6" alt="">
-            <!-- <img src="img/" class="thumbnail col-12" alt=""> -->
-            
+            <h3 style="text-align: center; color:#00ffab;" class="col-10">Nimaga qarab turibsiz yemaysizmi?</h3>
+            <img src="img1/photo-1469533667357-006056eaf780.jpg" class="thumbnail col-12" alt="">
+            <img class="thumbnail col-6" src="img1/photo-1557142046-c704a3adf364.jpg" alt="">
+            <img src="img1/photo-1541780171255-b162a3a147e3.jpg" class="thumbnail col-6" alt="">
+            <img class="thumbnail col-12" src="img1/photo-1525034839140-53bdec0b0296.jpg" alt="">
+            <img class="thumbnail col-6" src="img1/photo-1571386630001-d8394dd7b8db.jpg" alt="">
+            <img src="img1/photo-1563805042-7684c019e1cb.jpg" class="thumbnail col-6" alt="">
+            <img class="thumbnail col-12" src="img1/photo-1565320095022-b810fe4b51ff.jpg" alt="">
+            <img class="thumbnail col-6" src="img1/photo-1571606809798-027ae70d593f.jpg" alt="">
+            <img src="img1/photo-1571778127658-9275961ee810.jpg" class="thumbnail col-6" alt="">
+            <img class="thumbnail col-12" src="img1/photo-1561845730-208ad5910553.jpg" alt="">
+            <img class="thumbnail col-6" src="img1/photo-1572302792185-56f963ebbc4c.jpg" alt="">
+            <img src="img1/photo-1584818676673-f034ea74ccfc.jpg" class="thumbnail col-6" alt="">
+            <img class="thumbnail col-12" src="img1/photo-1567206563064-6f60f40a2b57.jpg" alt="">
+            <img class="thumbnail col-6" src="img1/slider-nav-4.png" alt="">
+            <img src="img1/photo-1514056052883-d017fddd0426.jpg" class="thumbnail col-6" alt="">
+            <img class="thumbnail col-12" src="img1/photo-1588195538326-c5b1e9f80a1b.jpg" alt="">
         </div>
     </div>
 </body>
