--- a/index.html
+++ b/index.html
@@ -11,11 +11,10 @@
 
 <body>
     <div class="container-fuluid">
-        <img src="img/jason-leung-fXAuCMEYGY4-unsplash.jpg" alt="" style="position: fixed; width: 100%;" class="thumbnail">
-        <div class="row justify-content-around part1">
+        <div class="row justify-content-around part1" style="background-image: url(img/jason-leung-fXAuCMEYGY4-unsplash.jpg);background-size: 100%; height: 600px;">
         
-            <p class="col-11" style="color: rgb(137, 255, 2); font-size: 40px; text-align: center;">
-            Assalomu alaykum aziz guruhdoshim <span style="color: red; text-transform: uppercase;">Dilshodaxon
+            <p class="col-11" style="color: #ff3a02; font-size: 40px; text-align: center;">
+            Assalomu alaykum aziz guruhdoshim <span style="color: red; text-transform: uppercase;font-weight: bold;">Dilshodaxon
                 Valijonova</span>
             sizni bugungi tavallud ayyomingiz bilan chin qalbimdan tabriklayman!!!! Ilohim o'ylagan barcha ezgu
             niyatlaringizga yeting.
